Створена сторінка portfolio.html
Скопійовані header і footer на сторінку portfolio.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav>
             <a href="/">WebStudio</a>
             <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
+                <li><a href="/">Студія</a></li>
+                <li><a href="./portfolio.html">Портфоліо</a></li>
                 <li><a href="">Контакти</a></li>
             </ul>
         </nav>
@@ -53,9 +53,9 @@
         <section>
             <h2>Чим ми займаємося</h2>
             <ul>
-                <li><img src="./images/laptop.jpg" alt="Написання коду" width="370" height="294"></li>
-                <li><img src="./images/phone.jpg" alt="Підбірка дизайну додатку для телефона" width="370" height="294"></li>
-                <li><img src="./images/tablet.jpg" alt="Відкрита палітра кольорів на планшеті" width="370" height="294"></li>
+                <li><img src="./images/development.jpg" alt="Написання коду" width="370" height="294"></li>
+                <li><img src="./images/layout.jpg" alt="Підбірка дизайну додатку для телефона" width="370" height="294"></li>
+                <li><img src="./images/palette.jpg" alt="Відкрита палітра кольорів на планшеті" width="370" height="294"></li>
             </ul>
         </section>
         
