--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         </section>
         
         <section>
-            <!-- Заголовок цієї секції далі буде hidden -->
-            <h2>Наші перваги</h2>
+            <h2 hidden>Наші перваги</h2>
             <ul>
                 <li>
                     <h3>Увага до деталей</h3>
