--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,65 @@
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <h1 hidden>Наші роботи</h1>
+            <ul>
+                <li><button type="button">Усі</button></li>
+                <li><button type="button">Веб-сайти</button></li>
+                <li><button type="button">Додатки</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+            </ul>
+            <ul>
+                <li>
+                    <img src="./images/website.jpg" alt="Ноутбук" width="370" height="294">
+                    <h2>Технокряк</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/basketball.jpg" alt="Баскетбол" width="370" height="294">
+                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/fish.jpg" alt="Риба" width="370" height="294">
+                    <h2>Ресторан Seafood</h2>
+                    <p>Додаток</p>
+                </li>
+                <li>
+                    <img src="./images/headphone.jpg" alt="Навушники" width="370" height="294">
+                    <h2>Проєкт Prime</h2>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/boxes.jpg" alt="Дві коробки" width="370" height="294">
+                    <h2>Проєкт Boxes</h2>
+                    <p>Додаток</p>
+                </li>
+                <li>
+                    <img src="./images/pc.jpg" alt="Персональний комп'ютер" width="370" height="294">
+                    <h2>Inspiration has no Borders</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/magazine.jpg" alt="Журнал" width="370" height="294">
+                    <h2>Видання Limited Edition</h2>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/tag.jpg" alt="Етикетка" width="370" height="294">
+                    <h2>Проєкт LAB</h2>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/laptop.jpg" alt="Ноутбук" width="370" height="294">
+                    <h2>Growing Business</h2>
+                    <p>Додаток</p>
+                </li>
+            </ul>
+        </section>
+    </main>
     <footer>
         <a href="/">WebStudio</a>
         <address>
