--- a/portfolio.html
+++ b/portfolio.html
@@ -5,20 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфоліо</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="/">WebStudio</a>
+            <a href="/" class="logo"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
             <ul>
-                <li><a href="./index.html">Студія</a></li>
-                <li><a href="./portfolio.html">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+                <li><a href="./index.html" class="header-link">Студія</a></li>
+                <li><a href="./portfolio.html" class="header-link current">Портфоліо</a></li>
+                <li><a href="" class="header-link">Контакти</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="header-link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -81,7 +87,7 @@
         </section>
     </main>
     <footer>
-        <a href="/">WebStudio</a>
+        <a href="/" class="logo"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
         <address>
             <ul>
                 <li><a href="https://goo.gl/maps/kAR4QX175ZXcQiyq7" target="_blank" title="Google Карти">м. Київ, пр-т Лесі
