Стилізація index.html
Стилізація index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <a href="/" class="logo"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
         <address>
             <ul>
