--- a/portfolio.html
+++ b/portfolio.html
@@ -16,72 +16,72 @@
     <header>
         <nav>
             <a href="/" class="logo"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
-            <ul>
+            <ul class="list">
                 <li><a href="./index.html" class="header-link">Студія</a></li>
                 <li><a href="./portfolio.html" class="header-link current">Портфоліо</a></li>
                 <li><a href="" class="header-link">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="list">
             <li><a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="header-link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <section>
+        <section class="portfolio">
             <h1 hidden>Наші роботи</h1>
-            <ul>
-                <li><button type="button">Усі</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+            <ul class="list">
+                <li><button type="button" class="filter-buttons">Усі</button></li>
+                <li><button type="button" class="filter-buttons">Веб-сайти</button></li>
+                <li><button type="button" class="filter-buttons">Додатки</button></li>
+                <li><button type="button" class="filter-buttons">Дизайн</button></li>
+                <li><button type="button" class="filter-buttons">Маркетинг</button></li>
             </ul>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/website.jpg" alt="Ноутбук" width="370" height="294">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="portfolio-title">Технокряк</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/basketball.jpg" alt="Баскетбол" width="370" height="294">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/fish.jpg" alt="Риба" width="370" height="294">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Додаток</p>
+                    <h2 class="portfolio-title">Ресторан Seafood</h2>
+                    <p class="portfolio-text">Додаток</p>
                 </li>
                 <li>
                     <img src="./images/headphone.jpg" alt="Навушники" width="370" height="294">
-                    <h2>Проєкт Prime</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="portfolio-title">Проєкт Prime</h2>
+                    <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/boxes.jpg" alt="Дві коробки" width="370" height="294">
-                    <h2>Проєкт Boxes</h2>
-                    <p>Додаток</p>
+                    <h2 class="portfolio-title">Проєкт Boxes</h2>
+                    <p class="portfolio-text">Додаток</p>
                 </li>
                 <li>
                     <img src="./images/pc.jpg" alt="Персональний комп'ютер" width="370" height="294">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/magazine.jpg" alt="Журнал" width="370" height="294">
-                    <h2>Видання Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <h2 class="portfolio-title">Видання Limited Edition</h2>
+                    <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/tag.jpg" alt="Етикетка" width="370" height="294">
-                    <h2>Проєкт LAB</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="portfolio-title">Проєкт LAB</h2>
+                    <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/laptop.jpg" alt="Ноутбук" width="370" height="294">
-                    <h2>Growing Business</h2>
-                    <p>Додаток</p>
+                    <h2 class="portfolio-title">Growing Business</h2>
+                    <p class="portfolio-text">Додаток</p>
                 </li>
             </ul>
         </section>
@@ -89,11 +89,11 @@
     <footer class="footer">
         <a href="/" class="logo"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
         <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/kAR4QX175ZXcQiyq7" target="_blank" title="Google Карти">м. Київ, пр-т Лесі
+            <ul class="list">
+                <li><a href="https://goo.gl/maps/kAR4QX175ZXcQiyq7" target="_blank" title="Google Карти" class="footer-address link">м. Київ, пр-т Лесі
                         Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="footer-email link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="footer-phone link">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
