--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <nav>
             <a href="/" class="logo"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
             <ul class="list">
-                <li><a href="/" class="header-link current">Студія</a></li>
-                <li><a href="./portfolio.html" class="header-link">Портфоліо</a></li>
-                <li><a href="" class="header-link">Контакти</a></li>
+                <li><a href="/" class="header-link current hover-focus">Студія</a></li>
+                <li><a href="./portfolio.html" class="header-link hover-focus">Портфоліо</a></li>
+                <li><a href="" class="header-link hover-focus">Контакти</a></li>
             </ul>
         </nav>
         <ul class="list">
-            <li><a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="header-link">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="header-email hover-focus">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="header-phone hover-focus">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -94,9 +94,9 @@
         <a href="/" class="logo"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
         <address>
             <ul class="list">
-                <li><a href="https://goo.gl/maps/kAR4QX175ZXcQiyq7" target="_blank" title="Google Карти" class="footer-address link">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="footer-email link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="footer-phone link">+38 096 111 11 11</a></li>
+                <li><a href="https://goo.gl/maps/kAR4QX175ZXcQiyq7" target="_blank" title="Google Карти" class="footer-address link hover-focus">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="footer-email link hover-focus">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="footer-phone link hover-focus">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
