--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="logo"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
+            <a href="./index.html" class="logo"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
             <ul class="list">
                 <li><a href="/" class="header-link current hover-focus">Студія</a></li>
                 <li><a href="./portfolio.html" class="header-link hover-focus">Портфоліо</a></li>
@@ -91,7 +91,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="/" class="logo"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
+        <a href="./index.html" class="logo"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
         <address>
             <ul class="list">
                 <li><a href="https://goo.gl/maps/kAR4QX175ZXcQiyq7" target="_blank" title="Google Карти" class="footer-address link hover-focus">м. Київ, пр-т Лесі Українки, 26</a></li>
