--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <ul class="list">
                 <li><a href="./index.html" class="header-link hover-focus">Студія</a></li>
                 <li><a href="./portfolio.html" class="header-link current hover-focus">Портфоліо</a></li>
-                <li><a href="" class="header-link hover-focus">Контакти</a></li>
+                <li><a href="#contacts" class="header-link hover-focus">Контакти</a></li>
             </ul>
         </nav>
         <ul class="list">
@@ -88,7 +88,7 @@
     </main>
     <footer class="footer">
         <a href="./index.html" class="logo"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
-        <address>
+        <address id="contacts">
             <ul class="list">
                 <li><a href="https://goo.gl/maps/kAR4QX175ZXcQiyq7" target="_blank" title="Google Карти" class="footer-address link hover-focus">м. Київ, пр-т Лесі
                         Українки, 26</a></li>
