--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logo"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
+            <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
             <ul class="list">
                 <li><a href="./index.html" class="header-link current hover-focus">Студія</a></li>
                 <li><a href="./portfolio.html" class="header-link hover-focus">Портфоліо</a></li>
@@ -34,7 +34,7 @@
         </section>
         
         <section class="features">
-            <h2 hidden>Наші перваги</h2>
+            <h2 class="hide">Наші перваги</h2>
             <ul class="list">
                 <li>
                     <h3 class="features-title">Увага до деталей</h3>
@@ -91,7 +91,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="logo"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
         <address id="contacts">
             <ul class="list">
                 <li><a href="https://goo.gl/maps/kAR4QX175ZXcQiyq7" target="_blank" title="Google Карти" class="footer-address link hover-focus">м. Київ, пр-т Лесі Українки, 26</a></li>
