--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logo"><span class="web-header">Web</span><span class="studio-header">Studio</span></a>
+            <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
             <ul class="list">
                 <li><a href="./index.html" class="header-link hover-focus">Студія</a></li>
                 <li><a href="./portfolio.html" class="header-link current hover-focus">Портфоліо</a></li>
@@ -29,7 +29,7 @@
     </header>
     <main>
         <section class="portfolio">
-            <h1 hidden>Наші роботи</h1>
+            <h1 class="hide">Наші роботи</h1>
             <ul class="list">
                 <li><button type="button" class="filter-buttons">Усі</button></li>
                 <li><button type="button" class="filter-buttons">Веб-сайти</button></li>
@@ -87,7 +87,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="logo"><span class="web-footer">Web</span><span class="studio-footer">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
         <address id="contacts">
             <ul class="list">
                 <li><a href="https://goo.gl/maps/kAR4QX175ZXcQiyq7" target="_blank" title="Google Карти" class="footer-address link hover-focus">м. Київ, пр-т Лесі
